# AethericPropulsion

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_SESSION_SUMMARY_2025-12-10.md  CI_FAILURE_ANALYSIS.md  CMakeLists.txt  CONFLICT_RESOLUTION_GUIDE.md  DeepSearch bot algorithm_07Aug2025_A.docx  FUTURE_SOURCE_INTEGRATION_REFERENCE.md  LICENSE.md  MERGE_CONFLICT_ANALYSIS.md  README  README.md  SOURCE4_INTEGRATION_COMPLETE.md  SOURCE4_INTEGRATION_PLAN.md  SOURCE4_SOURCE6_COMBINED_ARCHITECTURE.md  Source167.cpp  Star Magic_cpp_04Oct2025.txt  Star Magic_txt.docx  UQFFBuoyancy.h  source10.cpp  source168.cpp  source169.cpp  source170.cpp  source171.cpp  source172.cpp  source174_wolfram_bridge_embedded.cpp  source176_auto_full_uqff.cpp  source177_wolfram_field_unity.cpp  source178_grok_api.cpp  source2(HEAD PROGRAM).cpp  source200_cosmic_quantum_egg.cpp  source4_forward.h  source4_register.cpp  source4_simulation_harness.cpp  source4_wolfram.cpp  source4_wolfram_COMPLETE_SPEC.md  source4_wolfram_compressed.cpp  source4_wolfram_resonance.cpp  source6_register.cpp  source6_simulation_harness.cpp  (+5 more)
.github/: SESSION_LOG_2025-12-08.md  copilot-instructions.md
.github/workflows/: windows-cmake.yml
Core/: SystemCatalogue.hpp
cmake/: observational_systems_config.h.in  uqff_tracing.h.in
docs/: PHYSICS_METHOD_VERIFICATION_REPORT.md  SOURCE4_SOURCE6_INTEGRATION_REPORT.md  VERIFICATION_REPORT_2025-12-10.md
wolfram_extraction/generated_classes/: Source167.cpp_wolfram.cpp  source10.cpp_wolfram.cpp  source168.cpp_wolfram.cpp  source169.cpp_wolfram.cpp  source170.cpp_wolfram.cpp  source171.cpp_wolfram.cpp  source172.cpp_wolfram.cpp
